Org: Adds a button to show a modal with file links in the file details
TYPE: Feature
LINK: OGC-2077

--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-03-11 08:43+0100\n"
+"POT-Creation-Date: 2025-03-11 16:35+0100\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -62,6 +62,21 @@ msgstr "Dernières nouvelles modifiées"
 
 msgid "Web Statistics"
 msgstr "Statistiques Web"
+
+msgid "Unique Visitors in the Last Month"
+msgstr "Visiteurs uniques le mois dernier"
+
+msgid "Total Visits in the Last Month"
+msgstr "Total des visites le mois dernier"
+
+msgid "Total Page Views in the Last Month"
+msgstr "Total des pages vues le mois dernier"
+
+msgid "Number of Page Views per Visit"
+msgstr "Nombre de pages vues par visite"
+
+msgid "Average Visit Duration in Minutes"
+msgstr "Durée moyenne de la visite en minutes"
 
 msgid "No data available"
 msgstr "Aucune donnée disponible"
@@ -879,11 +894,6 @@ msgstr "Commentaire"
 
 msgid "Please provide at least one change"
 msgstr "Veuillez apporter au moins une modification"
-
-msgid ""
-"When using Firebase, publication start must be at least 5 minutes in the "
-"future"
-msgstr "Lorsque vous utilisez Firebase, le début de la publication doit se situer au moins 5 minutes dans le futur"
 
 msgid "Publication end must be in the future"
 msgstr "La fin de la publication doit être dans le futur"
@@ -2152,11 +2162,15 @@ msgstr ""
 "Une erreur s'est produite lors de la validation des informations "
 "d'identification Firebase : {0}"
 
-msgid "E-Mail Address"
-msgstr "Adresse e-mail"
+msgid "VAT Rate"
+msgstr "Taux de TVA"
 
-msgid "The subscriber has given consent to receive the newsletter."
-msgstr "L'abonné a donné son consentement pour recevoir la newsletter."
+msgid ""
+"This is the VAT rate in percent. The VAT rate will apply to all prices in "
+"the forms."
+msgstr ""
+"Il s'agit du taux de TVA en pourcentage. Le taux de TVA s'appliquera à tous "
+"les prix dans les formulaires."
 
 msgid ""
 "Select newsletter categories your are interested in. You will receive the "
@@ -2390,6 +2404,9 @@ msgstr "Association sportive"
 
 msgid "all day"
 msgstr "toute la journée"
+
+msgid "VAT"
+msgstr "TVA"
 
 msgid "Homepage"
 msgstr "Page d'accueil"
@@ -3269,14 +3286,14 @@ msgstr "Voulez-vous vraiment supprimer l'iFrame « ${title} » ?"
 msgid "Copy"
 msgstr "Copie"
 
-msgid "Paste"
-msgstr "Coller"
+msgid "A News cannot be pasted as Topic"
+msgstr "Une nouvelle ne peut pas être collée comme un sujet"
 
 msgid "A Topic cannot be pasted as News"
 msgstr "Un sujet ne peut pas être collé comme une nouvelle"
 
-msgid "A News cannot be pasted as Topic"
-msgstr "Une nouvelle ne peut pas être collée comme un sujet"
+msgid "Paste"
+msgstr "Coller"
 
 msgid "Please note that this page has subpages which will also be deleted!"
 msgstr ""
@@ -3853,7 +3870,7 @@ msgid "${count} words"
 msgstr "${count} mots"
 
 msgid "Do you really want to delete this file?"
-msgstr "Voulez-vous vraiment supprimer ce fichier ?"
+msgstr "Voulez-vous vraiment supprimer ce fichier?"
 
 msgid "Delete File"
 msgstr "Supprimez le fichier"
@@ -3866,6 +3883,12 @@ msgstr "Renommer"
 
 msgid "Download"
 msgstr "Télécharger"
+
+msgid "Linked Pages"
+msgstr "Pages reliées"
+
+msgid "Links to ${filename}"
+msgstr "Liens vers ${filename}"
 
 msgid "Digital seal applied by ${signee} on ${date}"
 msgstr "Sceau digital appliqué par ${signee} le ${date}"
@@ -5416,6 +5439,14 @@ msgstr "Nouveau formulaire de document"
 msgid "Edit Document Form"
 msgstr "Modifier le formulaire de document"
 
+msgid ""
+"Notifications have already been sent for this news item. A new notification "
+"will not be sent, even if the publication date is changed."
+msgstr ""
+"Notifications ont déjà été envoyées pour cette nouvelle. Une nouvelle "
+"notification ne sera pas envoyée, même si la date de publication est "
+"modifiée."
+
 msgid "Moves the topic and all its sub topics to the given destination."
 msgstr "Déplace le sujet et tous ses sous-sujets vers la destination donnée."
 
@@ -5827,12 +5858,6 @@ msgstr "${count} événements ont été importés"
 msgid "Move"
 msgstr "Déplacer"
 
-msgid ""
-"Notifications have already been sent for this news item. A new notification "
-"will not be sent, even if the publication date is changed."
-msgstr "Notifications ont déjà été envoyées pour cette nouvelle. Une nouvelle "
-"notification ne sera pas envoyée, même si la date de publication est modifiée."
-
 msgid "Your payment has been received"
 msgstr "Votre paiement a été reçu"
 
@@ -6220,6 +6245,9 @@ msgstr ""
 "Procédez avec prudence. Les billets et les données qu'ils contiennent "
 "peuvent être irrévocablement supprimés."
 
+msgid "Value Added Tax"
+msgstr "Taxe sur la valeur ajoutée"
+
 msgid "Chat"
 msgstr "Chat"
 
@@ -6510,35 +6538,3 @@ msgstr "Un compte a été créé pour vous"
 
 msgid "The user was created successfully"
 msgstr "L'utilisateur a bien été créé"
-
-msgid "Value Added Tax"
-msgstr "Taxe sur la valeur ajoutée"
-
-msgid "VAT Rate"
-msgstr "Taux de TVA"
-
-msgid "VAT"
-msgstr "TVA"
-
-msgid "This is the VAT rate in percent. The VAT rate will apply to all prices "
-"in the forms."
-msgstr "Il s'agit du taux de TVA en pourcentage. Le taux de TVA s'appliquera "
-"à tous les prix dans les formulaires."
-
-msgid "Unique Visitors in the Last Month"
-msgstr "Visiteurs uniques le mois dernier"
-
-msgid "Total Visits in the Last Month"
-msgstr "Total des visites le mois dernier"
-
-msgid "Total Page Views in the Last Month"
-msgstr "Total des pages vues le mois dernier"
-
-msgid "Number of Page Views per Visit"
-msgstr "Nombre de pages vues par visite"
-
-msgid "Average Visit Duration in Minutes"
-msgstr "Durée moyenne de la visite en minutes"
-
-msgid "Terminaux ID"
-msgstr "ID du terminal"
