--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-03-11 16:35+0100\n"
+"POT-Creation-Date: 2025-03-12 16:30+0100\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -1909,8 +1909,19 @@ msgstr "Bitte geben Sie ein Datumspaar pro Zeile ein"
 msgid "End date needs to be after start date"
 msgstr "Das End-Datum muss vor dem Start-Datum sein"
 
-msgid "Email adress for notifications about newly opened tickets"
-msgstr "E-Mail-Adresse für Benachrichtigungen zu geöffneten Tickets"
+msgid "Hide personal email addresses"
+msgstr "Persönliche E-Mail-Adressen verstecken"
+
+msgid "Hide personal email addresses in the ticket system"
+msgstr "Persönliche E-Mail-Adressen im Ticketsystem verstecken"
+
+msgid "General email address"
+msgstr "Allgemeine E-Mail-Adresse"
+
+msgid "Email address that is displayed instead of the personal email address"
+msgstr ""
+"E-Mail-Adresse, die anstelle der persönlichen E-Mail-Adresse "
+"angezeigt wird"
 
 msgid "Accept request and close ticket automatically based on:"
 msgstr "Akzeptiere und schliesse Tickets automatisch basierend auf:"
@@ -1920,6 +1931,9 @@ msgstr "Ticket-Kategorie"
 
 msgid "User role"
 msgstr "Benutzer-Rolle"
+
+msgid "Auto-accept and auto-close"
+msgstr "Automatisches Akzeptieren und Schliessen"
 
 msgid ""
 "Accept request and close ticket automatically for these ticket categories"
@@ -1938,6 +1952,9 @@ msgstr "Akzeptiere und schliesse Tickets automatisch für diese Benutzer-Rollen"
 
 msgid "User used to auto-accept tickets"
 msgstr "Benutzer für das automatische Akzeptieren von Tickets"
+
+msgid "Email adress for notifications about newly opened tickets"
+msgstr "E-Mail-Adresse für Benachrichtigungen zu geöffneten Tickets"
 
 msgid "Block email confirmation when this ticket category is opened"
 msgstr "Keine Email-Benachrichtung nach Eröffnung dieser Ticket-Kategorie"
@@ -3127,8 +3144,8 @@ msgstr "Die Absage von ${title} kann nicht rückgängig gemacht werden."
 msgid "Reject reservation"
 msgstr "Reservation absagen"
 
-#.
 #. Used in sentence: "${event} published."
+#.
 msgid "Event"
 msgstr "Veranstaltung"
 
