--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-03-11 16:35+0100\n"
+"POT-Creation-Date: 2025-03-12 16:30+0100\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -1911,9 +1911,18 @@ msgstr "Veuillez renseigner une paire de dates par ligne"
 msgid "End date needs to be after start date"
 msgstr "La date de fin doit être postérieure à la date de début"
 
-msgid "Email adress for notifications about newly opened tickets"
+msgid "Hide personal email addresses"
+msgstr "Masquer les adresses e-mail personnelles"
+
+msgid "Hide personal email addresses in the ticket system"
+msgstr "Masquer les adresses e-mail personnelles dans le système de ticket"
+
+msgid "General email address"
+msgstr "Adresse e-mail générale"
+
+msgid "Email address that is displayed instead of the personal email address"
 msgstr ""
-"Adresse électronique pour les notifications concernant les tickets ouverts"
+"Adresse e-mail qui est affichée à la place de l'adresse e-mail personnelle"
 
 msgid "Accept request and close ticket automatically based on:"
 msgstr ""
@@ -1924,6 +1933,9 @@ msgstr "Catégorie de billet"
 
 msgid "User role"
 msgstr "Rôle d'utilisateur"
+
+msgid "Auto-accept and auto-close"
+msgstr "Acceptation et fermeture automatiques"
 
 msgid ""
 "Accept request and close ticket automatically for these ticket categories"
@@ -1945,6 +1957,10 @@ msgstr ""
 
 msgid "User used to auto-accept tickets"
 msgstr "Utilisateur pour l'acceptation automatique des tickets"
+
+msgid "Email adress for notifications about newly opened tickets"
+msgstr ""
+"Adresse électronique pour les notifications concernant les tickets ouverts"
 
 msgid "Block email confirmation when this ticket category is opened"
 msgstr "N'envoyez pas d'e-mail lorsque cette catégorie de billets est ouverte"
@@ -3132,8 +3148,8 @@ msgstr "Refuser ${title} est irréversible."
 msgid "Reject reservation"
 msgstr "Refuser la réservation"
 
-#.
 #. Used in sentence: "${event} published."
+#.
 msgid "Event"
 msgstr "Événement"
 
@@ -3496,8 +3512,8 @@ msgid ""
 "filled-out form."
 msgstr ""
 "Veuillez vérifier vos données et appuyez sur « Compléter » pour finaliser le "
-"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur "
-"« Modifier » pour retourner sur le formulaire complété."
+"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur « "
+"Modifier » pour retourner sur le formulaire complété."
 
 msgid ""
 "The image shown in the list view is a square. To have your image shown fully "
