--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-03-11 16:15+0100\n"
+"POT-Creation-Date: 2025-03-20 14:18+0100\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: German\n"
@@ -1529,6 +1529,13 @@ msgstr "Ticket aus dem Archiv geholt."
 msgid "Ticket uploaded to Gever."
 msgstr "Ticket zu Gever hochgeladen."
 
+msgid ""
+"You have exceeded the maximum number of unique accesses to protected "
+"resources. Please try again at a later date."
+msgstr ""
+"Sie haben die maximale Anzahl an Zugriffen auf geschützte Inhalte "
+"überschritten. Bitte versuchen Sie es zu einem späteren Zeitpunkt wieder."
+
 msgid "Your search returned no results."
 msgstr "Zu Ihrer Suche wurde nichts gefunden."
 
@@ -2238,6 +2245,9 @@ msgstr ""
 
 msgid "Push Notification Overview"
 msgstr "Übersicht Push-Benachrichtigungen"
+
+msgid "Value Added Tax"
+msgstr "Mehrwertsteuer"
 
 msgid "New Note"
 msgstr "Neue Notiz"
