Translations, remove logs, save data on model

--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-03-11 16:35+0100\n"
+"POT-Creation-Date: 2025-03-24 10:25+0100\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -1249,6 +1249,9 @@ msgstr "Funktion"
 msgid "Organisation"
 msgstr "Organisation"
 
+msgid "Select the organisations this person belongs to"
+msgstr "Wählen Sie die Organisationen, zu denen diese Person gehört"
+
 msgid "Sub organisation"
 msgstr "Unterorganisation"
 
@@ -2011,11 +2014,11 @@ msgid "Invalid YAML format. Please refer to the example."
 msgstr "Ungültiges YAML Format. Bitte beachten Sie das Beispiel."
 
 msgid ""
-"Invalid format. Please define an organisation name with topics and subtopics "
-"according the example."
+"Invalid format. Please define a list with topics and subtopics according the "
+"example."
 msgstr ""
-"Ungültiges Format. Bitte definieren Sie eine Organisation mit Themen und "
-"Unterthemen wie im Beispiel."
+"Ungültiges Format. Bitte definieren Sie eine Liste mit Themen und "
+"Unterthemen entsprechend dem Beispiel."
 
 msgid ""
 "Invalid format. Please define topics and subtopics according to the example."
@@ -2146,6 +2149,32 @@ msgstr "Ungültiges JSON-Format in den Firebase- Zugangsdaten"
 #, python-format
 msgid "Error validating Firebase credentials: {0}"
 msgstr "Fehler bei der Überprüfung der Firebase- Zugangsdaten: {0}"
+
+msgid "Organisation hierarchy"
+msgstr "Organisationshierarchie"
+
+msgid ""
+"Example for organisation hierarchy with subtopics in yaml format. Note: "
+"Deeper structures are not supported.\n"
+"```\n"
+"- Organisation:\n"
+"  - Sub-Organisation 1\n"
+"  - Sub-Organisation 2\n"
+"- Organisation 2:\n"
+"  - Sub-Organisation 1\n"
+"  - Sub-Organisation 2\n"
+"```"
+msgstr ""
+"Beispiel für Organisationshierarchie mit Unterorganisationen im yaml-Format. "
+"Hinweis: Tiefere Strukturen werden nicht unterstützt.\n"
+"```\n"
+"- Organisation:\n"
+"  - Unterorganisation 1\n"
+"  - Unterorganisation 2\n"
+"- Organisation 2:\n"
+"  - Unterorganisation 1\n"
+"  - Unterorganisation 2\n"
+"```"
 
 msgid "VAT Rate"
 msgstr "Mehrwertsteuersatz"
@@ -3125,8 +3154,8 @@ msgstr "Die Absage von ${title} kann nicht rückgängig gemacht werden."
 msgid "Reject reservation"
 msgstr "Reservation absagen"
 
-#.
 #. Used in sentence: "${event} published."
+#.
 msgid "Event"
 msgstr "Veranstaltung"
 
@@ -6517,3 +6546,33 @@ msgstr "Ein Konto wurde für Sie erstellt"
 
 msgid "The user was created successfully"
 msgstr "Der Benutzer wurde erfolgreich erstellt"
+
+#~ msgid ""
+#~ "Example for organisation hierarchy with subtopics in yaml format. Note: "
+#~ "Deeper structures are not supported.\n"
+#~ "```\n"
+#~ "Organisation:\n"
+#~ "  - Sub-Organisation 1\n"
+#~ "  - Sub-Organisation 2\n"
+#~ "Organisation 2:\n"
+#~ "  - Sub-Organisation 1\n"
+#~ "  - Sub-Organisation 2\n"
+#~ "```"
+#~ msgstr ""
+#~ "Beispiel für Organisationshierarchie mit Unterthemen im yaml-Format. "
+#~ "Hinweis: Tiefere Strukturen werden nicht unterstützt.\n"
+#~ "```\n"
+#~ "Organisation:\n"
+#~ "  - Unterorganisation 1\n"
+#~ "  - Unterorganisation 2\n"
+#~ "Organisation 2:\n"
+#~ "  - Unterorganisation 1\n"
+#~ "  - Unterorganisation 2\n"
+#~ "```"
+
+#~ msgid ""
+#~ "Invalid format. Please define an organisation name with topics and "
+#~ "subtopics according the example."
+#~ msgstr ""
+#~ "Ungültiges Format. Bitte definieren Sie eine Organisation mit Themen und "
+#~ "Unterthemen wie im Beispiel."
