--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-03-11 16:35+0100\n"
+"POT-Creation-Date: 2025-03-24 10:25+0100\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -1248,6 +1248,9 @@ msgstr "Fonction"
 msgid "Organisation"
 msgstr "Organisation"
 
+msgid "Select the organisations this person belongs to"
+msgstr "Sélectionnez les organisations auxquelles cette personne appartient"
+
 msgid "Sub organisation"
 msgstr "Sous-organisation"
 
@@ -2019,11 +2022,11 @@ msgid "Invalid YAML format. Please refer to the example."
 msgstr "Format YAML non valide. Veuillez vous référer à l'exemple."
 
 msgid ""
-"Invalid format. Please define an organisation name with topics and subtopics "
-"according the example."
+"Invalid format. Please define a list with topics and subtopics according the "
+"example."
 msgstr ""
-"Format non valide. Veuillez définir un nom d'organisation avec des sujets et "
-"des sous-sujets selon l'exemple."
+"Format non valide. Veuillez définir une liste de sujets et de sous-sujets "
+"selon l'exemple."
 
 msgid ""
 "Invalid format. Please define topics and subtopics according to the example."
@@ -2160,6 +2163,32 @@ msgid "Error validating Firebase credentials: {0}"
 msgstr ""
 "Une erreur s'est produite lors de la validation des informations "
 "d'identification Firebase : {0}"
+
+msgid "Organisation hierarchy"
+msgstr "Hiérarchie d'organisation"
+
+msgid ""
+"Example for organisation hierarchy with subtopics in yaml format. Note: "
+"Deeper structures are not supported.\n"
+"```\n"
+"- Organisation:\n"
+"  - Sub-Organisation 1\n"
+"  - Sub-Organisation 2\n"
+"- Organisation 2:\n"
+"  - Sub-Organisation 1\n"
+"  - Sub-Organisation 2\n"
+"```"
+msgstr ""
+"Exemple de hiérarchie d'organisation avec des sous-sujets au format yaml. "
+"Note : Les structures plus profondes ne sont pas prises en charge. \n"
+"```\n"
+"- Organisation:\n"
+"  - Sous-organisation 1\n"
+"  - Sous-organisation 2\n"
+"- Organisation 2:\n"
+"  - Sous-organisation 1\n"
+"  - Sous-organisation 2\n"
+"```"
 
 msgid "VAT Rate"
 msgstr "Taux de TVA"
@@ -3131,8 +3160,8 @@ msgstr "Refuser ${title} est irréversible."
 msgid "Reject reservation"
 msgstr "Refuser la réservation"
 
-#.
 #. Used in sentence: "${event} published."
+#.
 msgid "Event"
 msgstr "Événement"
 
@@ -3495,8 +3524,8 @@ msgid ""
 "filled-out form."
 msgstr ""
 "Veuillez vérifier vos données et appuyez sur « Compléter » pour finaliser le "
-"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur "
-"« Modifier » pour retourner sur le formulaire complété."
+"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur « "
+"Modifier » pour retourner sur le formulaire complété."
 
 msgid ""
 "The image shown in the list view is a square. To have your image shown fully "
@@ -6537,3 +6566,33 @@ msgstr "Un compte a été créé pour vous"
 
 msgid "The user was created successfully"
 msgstr "L'utilisateur a bien été créé"
+
+#~ msgid ""
+#~ "Example for organisation hierarchy with subtopics in yaml format. Note: "
+#~ "Deeper structures are not supported.\n"
+#~ "```\n"
+#~ "Organisation:\n"
+#~ "  - Sub-Organisation 1\n"
+#~ "  - Sub-Organisation 2\n"
+#~ "Organisation 2:\n"
+#~ "  - Sub-Organisation 1\n"
+#~ "  - Sub-Organisation 2\n"
+#~ "```"
+#~ msgstr ""
+#~ "Exemple de hiérarchie d'organisation avec des sous-sujets au format yaml. "
+#~ "Note : Les structures plus profondes ne sont pas prises en charge. \n"
+#~ "```\n"
+#~ "Organisation:\n"
+#~ "  - Sous-organisation 1\n"
+#~ "  - Sous-organisation 2\n"
+#~ "Organisation 2:\n"
+#~ "  - Sous-organisation 1\n"
+#~ "  - Sous-organisation 2\n"
+#~ "```"
+
+#~ msgid ""
+#~ "Invalid format. Please define an organisation name with topics and "
+#~ "subtopics according the example."
+#~ msgstr ""
+#~ "Format non valide. Veuillez définir un nom d'organisation avec des sujets "
+#~ "et des sous-sujets selon l'exemple."
