--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-03-11 16:35+0100\n"
+"POT-Creation-Date: 2025-03-24 10:25+0100\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1252,6 +1252,9 @@ msgstr "Funzione"
 msgid "Organisation"
 msgstr "Organizzazione"
 
+msgid "Select the organisations this person belongs to"
+msgstr "Seleziona le organizzazioni a cui appartiene questa persona"
+
 msgid "Sub organisation"
 msgstr "Sotto organizzazione"
 
@@ -2023,11 +2026,11 @@ msgid "Invalid YAML format. Please refer to the example."
 msgstr "Formato YAML non valido. Fare riferimento all'esempio."
 
 msgid ""
-"Invalid format. Please define an organisation name with topics and subtopics "
-"according the example."
+"Invalid format. Please define a list with topics and subtopics according the "
+"example."
 msgstr ""
-"Formato non valido. Definire un nome di organizzazione con argomenti e "
-"sottoargomenti secondo l'esempio."
+"Formato non valido. Definire un elenco con argomenti e sottoargomenti "
+"secondo l'esempio."
 
 msgid ""
 "Invalid format. Please define topics and subtopics according to the example."
@@ -2159,6 +2162,32 @@ msgstr "Formato JSON non valido nelle credenziali Firebase"
 #, python-format
 msgid "Error validating Firebase credentials: {0}"
 msgstr "Errore durante la convalida delle credenziali Firebase: {0}"
+
+msgid "Organisation hierarchy"
+msgstr "Gerarchia dell'organizzazione"
+
+msgid ""
+"Example for organisation hierarchy with subtopics in yaml format. Note: "
+"Deeper structures are not supported.\n"
+"```\n"
+"- Organisation:\n"
+"  - Sub-Organisation 1\n"
+"  - Sub-Organisation 2\n"
+"- Organisation 2:\n"
+"  - Sub-Organisation 1\n"
+"  - Sub-Organisation 2\n"
+"```"
+msgstr ""
+"Esempio di gerarchia dell'organizzazione con sottoargomenti in formato yaml. "
+"Nota: le strutture più profonde non sono supportate.\n"
+"```\n"
+"- Organizzazione:\n"
+"  - Sotto-organizzazione 1\n"
+"  - Sotto-organizzazione 2\n"
+"- Organizzazione 2:\n"
+"  - Sotto-organizzazione 1\n"
+"  - Sotto-organizzazione 2\n"
+"```"
 
 msgid "VAT Rate"
 msgstr "Aliquota IVA"
@@ -3134,8 +3163,8 @@ msgstr "Il rifiuto di ${title} non può essere annullato."
 msgid "Reject reservation"
 msgstr "Rifiuta prenotazione"
 
-#.
 #. Used in sentence: "${event} published."
+#.
 msgid "Event"
 msgstr "Evento"
 
@@ -6520,3 +6549,33 @@ msgstr "È stato creato un account per te"
 
 msgid "The user was created successfully"
 msgstr "Utente creato correttamente"
+
+#~ msgid ""
+#~ "Example for organisation hierarchy with subtopics in yaml format. Note: "
+#~ "Deeper structures are not supported.\n"
+#~ "```\n"
+#~ "Organisation:\n"
+#~ "  - Sub-Organisation 1\n"
+#~ "  - Sub-Organisation 2\n"
+#~ "Organisation 2:\n"
+#~ "  - Sub-Organisation 1\n"
+#~ "  - Sub-Organisation 2\n"
+#~ "```"
+#~ msgstr ""
+#~ "Esempio di gerarchia dell'organizzazione con sottoargomenti in formato "
+#~ "yaml. Nota: le strutture più profonde non sono supportate.\n"
+#~ "```\n"
+#~ "Organizzazione:\n"
+#~ "  - Sotto-organizzazione 1\n"
+#~ "  - Sotto-organizzazione 2\n"
+#~ "Organizzazione 2:\n"
+#~ "  - Sotto-organizzazione 1\n"
+#~ "  - Sotto-organizzazione 2\n"
+#~ "```"
+
+#~ msgid ""
+#~ "Invalid format. Please define an organisation name with topics and "
+#~ "subtopics according the example."
+#~ msgstr ""
+#~ "Formato non valido. Definire un nome di organizzazione con argomenti e "
+#~ "sottoargomenti secondo l'esempio."
