--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-03-27 09:48+0100\n"
+"POT-Creation-Date: 2025-04-01 14:22+0200\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -2018,13 +2018,6 @@ msgid "Invalid YAML format. Please refer to the example."
 msgstr "Ungültiges YAML Format. Bitte beachten Sie das Beispiel."
 
 msgid ""
-"Invalid format. Please define a list with topics and subtopics according the "
-"example."
-msgstr ""
-"Ungültiges Format. Bitte definieren Sie eine Liste mit Themen und "
-"Unterthemen entsprechend dem Beispiel."
-
-msgid ""
 "Invalid format. Please define topics and subtopics according to the example."
 msgstr ""
 "Ungültiges Format. Bitte definieren Sie Themen und Unterthemen wie im "
@@ -2185,6 +2178,27 @@ msgstr "Diese Felder für nicht angemeldete Benutzer ausblenden"
 
 msgid "External ID"
 msgstr "Externe ID"
+
+msgid ""
+"Invalid format. Please define a list with organisations and sub-"
+"organisations according the example."
+msgstr ""
+"Ungültiges Format. Bitte definieren Sie eine Liste mit Organisationen und "
+"Unterorganisationen wie im Beispiel."
+
+msgid ""
+"Invalid format. Please define organisations and sub-organisations according "
+"to the example."
+msgstr ""
+"Ungültiges Format. Bitte definieren Sie Organisationen und "
+"Unterorganisationen wie im Beispiel."
+
+msgid ""
+"Invalid format. Only organisations and sub-organisations are allowed - no "
+"deeper structures supported."
+msgstr ""
+"Ungültiges Format. Nur Organisationen und Unterorganisationen sind "
+"erlaubt - keine tiefer verschachtelten Strukturen unterstützt."
 
 msgid "VAT Rate"
 msgstr "Mehrwertsteuersatz"
@@ -6574,6 +6588,13 @@ msgstr "Ein Konto wurde für Sie erstellt"
 
 msgid "The user was created successfully"
 msgstr "Der Benutzer wurde erfolgreich erstellt"
+
+#~ msgid ""
+#~ "Invalid format. Please define a list with topics and subtopics according "
+#~ "the example."
+#~ msgstr ""
+#~ "Ungültiges Format. Bitte definieren Sie eine Liste mit Themen und "
+#~ "Unterthemen entsprechend dem Beispiel."
 
 #~ msgid ""
 #~ "Invalid format. Please define a listwith topics and subtopics according "
