--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-03-27 14:17+0100\n"
+"POT-Creation-Date: 2025-04-01 14:22+0200\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -2026,13 +2026,6 @@ msgid "Invalid YAML format. Please refer to the example."
 msgstr "Format YAML non valide. Veuillez vous référer à l'exemple."
 
 msgid ""
-"Invalid format. Please define a list with topics and subtopics according the "
-"example."
-msgstr ""
-"Format non valide. Veuillez définir une liste de sujets et de sous-sujets "
-"selon l'exemple."
-
-msgid ""
 "Invalid format. Please define topics and subtopics according to the example."
 msgstr ""
 "Format non valide. Veuillez définir les thèmes et les sous-thèmes selon "
@@ -2199,6 +2192,27 @@ msgstr "Masquer ces champs pour les utilisateurs non connectés"
 
 msgid "External ID"
 msgstr "ID externe"
+
+msgid ""
+"Invalid format. Please define a list with organisations and sub-"
+"organisations according the example."
+msgstr ""
+"Format non valide. Veuillez définir une liste avec des organisations et des "
+"sub-organisations selon l'exemple."
+
+msgid ""
+"Invalid format. Please define organisations and sub-organisations according "
+"to the example."
+msgstr ""
+"Format non valide. Veuillez définir des organisations et des sous-"
+"organisations selon l'exemple."
+
+msgid ""
+"Invalid format. Only organisations and sub-organisations are allowed - no "
+"deeper structures supported."
+msgstr ""
+"Format non valide. Seules les organisations et les sous-organisations sont "
+"autorisées - aucune structure plus profonde n'est prise en charge."
 
 msgid "VAT Rate"
 msgstr "Taux de TVA"
@@ -6594,6 +6608,13 @@ msgstr "Un compte a été créé pour vous"
 
 msgid "The user was created successfully"
 msgstr "L'utilisateur a bien été créé"
+
+#~ msgid ""
+#~ "Invalid format. Please define a list with topics and subtopics according "
+#~ "the example."
+#~ msgstr ""
+#~ "Format non valide. Veuillez définir une liste de sujets et de sous-sujets "
+#~ "selon l'exemple."
 
 #~ msgid ""
 #~ "Invalid format. Please define a listwith topics and subtopics according "
