--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-03-27 14:17+0100\n"
+"POT-Creation-Date: 2025-04-01 14:22+0200\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2030,13 +2030,6 @@ msgid "Invalid YAML format. Please refer to the example."
 msgstr "Formato YAML non valido. Fare riferimento all'esempio."
 
 msgid ""
-"Invalid format. Please define a list with topics and subtopics according the "
-"example."
-msgstr ""
-"Formato non valido. Definire un elenco con argomenti e sottoargomenti "
-"secondo l'esempio."
-
-msgid ""
 "Invalid format. Please define topics and subtopics according to the example."
 msgstr ""
 "Formato non valido. Definire gli argomenti e i sottoargomenti secondo "
@@ -2198,6 +2191,27 @@ msgstr "Nascondi questi campi per gli utenti non registrati"
 
 msgid "External ID"
 msgstr "ID esterno"
+
+msgid ""
+"Invalid format. Please define a list with organisations and sub-"
+"organisations according the example."
+msgstr ""
+"Formato non valido. Definire un elenco con organizzazioni e sotto-"
+"organizzazioni secondo l'esempio."
+
+msgid ""
+"Invalid format. Please define organisations and sub-organisations according "
+"to the example."
+msgstr ""
+"Formato non valido. Definire organizzazioni e sotto-organizzazioni secondo "
+"l'esempio."
+
+msgid ""
+"Invalid format. Only organisations and sub-organisations are allowed - no "
+"deeper structures supported."
+msgstr ""
+"Formato non valido. Sono consentite solo organizzazioni e sotto-"
+"organizzazioni, non sono supportate strutture più profonde."
 
 msgid "VAT Rate"
 msgstr "Aliquota IVA"
@@ -6577,6 +6591,13 @@ msgstr "È stato creato un account per te"
 
 msgid "The user was created successfully"
 msgstr "Utente creato correttamente"
+
+#~ msgid ""
+#~ "Invalid format. Please define a list with topics and subtopics according "
+#~ "the example."
+#~ msgstr ""
+#~ "Formato non valido. Definire un elenco con argomenti e sottoargomenti "
+#~ "secondo l'esempio."
 
 #~ msgid ""
 #~ "Invalid format. Please define a listwith topics and subtopics according "
