--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -1930,8 +1930,19 @@ msgstr "Inserisci una coppia di date per riga"
 msgid "End date needs to be after start date"
 msgstr "La data di fine deve essere successiva alla data di inizio"
 
-msgid "Email adress for notifications about newly opened tickets"
-msgstr "Indirizzo e-mail per le notifiche dei biglietti aperti"
+msgid "Hide personal email addresses"
+msgstr "Nascondi gli indirizzi e-mail personali"
+
+msgid "Hide personal email addresses in the ticket system"
+msgstr "Nascondi gli indirizzi e-mail personali nel sistema di ticket"
+
+msgid "General email address"
+msgstr "Indirizzo e-mail generale"
+
+msgid "Email address that is displayed instead of the personal email address"
+msgstr ""
+"Indirizzo e-mail che viene visualizzato invece dell'indirizzo e-mail "
+"personale"
 
 msgid "Accept request and close ticket automatically based on:"
 msgstr "Accetta la richiesta e chiudi il ticket automaticamente in base a:"
@@ -1941,6 +1952,9 @@ msgstr "Categoria del biglietto"
 
 msgid "User role"
 msgstr "Ruolo utente"
+
+msgid "Auto-accept and auto-close"
+msgstr "Accettazione e chiusura automatica"
 
 msgid ""
 "Accept request and close ticket automatically for these ticket categories"
@@ -1963,6 +1977,9 @@ msgstr ""
 
 msgid "User used to auto-accept tickets"
 msgstr "Utente abituato ad accettare automaticamente i biglietti"
+
+msgid "Email address for notifications about newly opened tickets"
+msgstr "Indirizzo e-mail per le notifiche dei biglietti aperti"
 
 msgid "Block email confirmation when this ticket category is opened"
 msgstr ""
@@ -6545,16 +6562,5 @@ msgstr "È stato creato un account per te"
 msgid "The user was created successfully"
 msgstr "Utente creato correttamente"
 
-#~ msgid ""
-#~ "Invalid format. Please define a listwith topics and subtopics according "
-#~ "the example."
-#~ msgstr ""
-#~ "Formato non valido. Definire una lista con argomenti e sottoargomenti "
-#~ "secondo l'esempio."
-
-#~ msgid ""
-#~ "Invalid format. Please define an organisation name with topics and "
-#~ "subtopics according the example."
-#~ msgstr ""
-#~ "Formato non valido. Definire un nome di organizzazione con argomenti e "
-#~ "sottoargomenti secondo l'esempio."
+#~ msgid "Email adress for notifications about newly opened tickets"
+#~ msgstr "Indirizzo e-mail per le notifiche dei biglietti aperti"
